--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
+  text-align: center;
+  display: flex;
   /* -webkit-tap-highlight-color: rgba(209, 29, 29, 0); */
   
 }
@@ -130,9 +132,16 @@ img{
   img{
     width:90%;
     align-items: center;
+    text-align: center;
   }
 }
-
+@media only screen and(max-width:760px){
+  html,body{
+    width: 100%;
+    overflow-x: hidden;
+    display: flex;
+  }
+}
 .display-1{
   font-size: 160px;
   font-weight: 1000;
